--- a/04/style.css
+++ b/04/style.css
@@ -1,7 +1,4 @@
-@font-face {
-    font-family: 'Inter';
-    src: local(),url('/04/assets/fonts/Inter-VariableFont_slnt\,wght.ttf');
-}
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap');
 
 *,::before,::after{
     margin:0;
@@ -13,7 +10,7 @@ body{
     max-width: 1440px;
     background-color: hsl(0, 0%, 8%);
     color: hsl(0, 0%, 100%);
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
