--- a/05/style.css
+++ b/05/style.css
@@ -62,7 +62,7 @@ p{
 }
 #mail-input{
     border: 1px solid hsl(231, 7%, 60%);
-    padding: 10px 15px;
+    padding: 15px 15px;
     border-radius: 5px;
 }
 #mail-input:focus{
@@ -73,7 +73,7 @@ p{
     color: white;
     background-color: hsl(234, 29%, 20%);
     border: none;
-    padding: 12px 15px;
+    padding: 15px 15px;
     border-radius: 5px;
     font-weight: 700;
     margin: 7px 0;
@@ -91,4 +91,41 @@ p{
     font-size: 12px;
     font-weight: 600;
     font-size: 15px;
+}
+.right{
+    display: block;
+}
+.top{
+    display: none;
+}
+.illustration-mobile{
+    width: 100%;
+}
+
+@media (max-width:768px) {
+    .container{
+        height: 100dvh;
+        width: 100%;
+        border-radius: 0;
+        flex-direction: column-reverse;
+        justify-content: start;
+        gap: 20px;
+        padding: 0;
+    }
+    .right{
+        display: none;
+    }
+    .top{
+        display: block;
+    }
+    .informations{
+        padding: 0  40px;
+        min-width: 100%;
+    }
+    .list-box{
+        gap: 13px;
+    }
+    li{
+        gap: 13px;
+    }
 }
