--- a/05/style.css
+++ b/05/style.css
@@ -130,10 +130,10 @@ p{
         padding: 0;
     }
     .success-container{
+        width: 100%;
         height: 100vh;
         justify-content: space-between;
         border-radius: 0;
-
     }
     .success-informations{
         display: flex;
