--- a/05/style.css
+++ b/05/style.css
@@ -120,6 +120,7 @@ p{
 }
 
 @media (max-width:768px) {
+
     .container{
         height: 100vh;
         width: 100%;
@@ -130,7 +131,7 @@ p{
         padding: 0;
     }
     .success-container{
-        width: 100%;
+        min-width: 100%;
         height: 100vh;
         justify-content: space-between;
         border-radius: 0;
@@ -142,6 +143,7 @@ p{
         align-items: start;
         gap: 30px;
         height: 350px;
+
     }
     .right{
         display: none;
